# all_rpo_new

./: README.md
r1/: .gitignore  README.md  TESTING.md  TESTING_SUMMARY.md  go.mod  go.sum  main.go
r10/: go.mod  main.go
r11/: .gitignore  go.mod  go.sum
r12/: .gitignore  main.py  requirements.txt
r13/: .gitignore  ball.py  brick.py  config.py  game.py  level.py  main.py  paddle.py  powerup.py  requirements.txt
r14/: .gitignore  index.html  package-lock.json  package.json
r15/: .gitignore  main.py
r16/: .gitignore  main.py  requirements.txt  test_imports.py  test_simple.py
r17/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
r18/: .gitignore  app.py  generate_sample_data.py  requirements.txt
r19/: .gitignore  pom.xml
r2/: .gitignore  README.md  pom.xml
r20/: .gitignore  index.html  package-lock.json  package.json
r21/: .gitignore  pom.xml
r22/: .gitignore  init_db.py  main.py
r23/: .gitignore  README.md
r24/: .gitignore  README.md  pyproject.toml
r24/code_analyzer/: analyzer.py  exporter.py  main.py  models.py  scanner.py
r25/: .gitignore  README.md  docker-compose-linux.yml  docker-compose.yml
r26/: .gitignore  pom.xml  test-api-curl.sh  test-api.ps1
r27/: .gitignore
r28/: .gitignore  README.md  README_DOCKER.md  docker-compose.yml
r3/: .gitignore  FIX_GUIDE.md  Makefile  OPTIMIZATION.md  README.md  build.ps1  diagnose.ps1  go.mod
r4/: .gitignore  README.md  pom.xml
r5/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json
(+761 files in other folders)
